add new section

--- a/index.html
+++ b/index.html
@@ -205,10 +205,17 @@
             </div>
         </section>
         <section id="video-about">
+            <div class="background"></div>
             <div class="container">
                 <div class="section-title">
                     <h2>Видео о нашей работе</h2>
                     <p>Просто посмотрите, как мы работаем</p>
+                </div>
+                <div class="section-video-wrap">
+                    <div class="play-button-wrap">
+                        <img src="assets/icons/play-button.svg" alt="Воспроизвести">
+                        <p>Смотреть видео</p>
+                    </div>
                 </div>
             </div>
         </section>
