--- a/index.html
+++ b/index.html
@@ -213,13 +213,83 @@
                 </div>
                 <div class="section-video-wrap">
                     <div class="play-button-wrap">
-                        <img src="assets/icons/play-button.svg" alt="Воспроизвести">
-                        <p>Смотреть видео</p>
+                        <a href="#"><img src="assets/icons/play-button.svg" alt="Воспроизвести"></a>
+                        <a href="#">Смотреть видео</a>
+                    </div>
+                </div>
+            </div>
+            <div class="second-container">
+                <div class="section-subscribe">
+                    <div class="section-content">
+                        <h3>Подпишитесь на нашу рассылку</h3>
+                        <p>Полезные статьи, акции, новости - получите все это сейчас!</p>
+                        <div class="input-wrap">
+                            <input type="text" placeholder="Ваш e-mail">
+                            <button>Подписаться</button>
+                        </div>
+                        <p>Мы не шлем спам, и не передаем никому ваши данные.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="column">
+                <div class="title">
+                    <h3>Контактная информация</h3>
+                </div>
+                <div class="list first-list">
+                    <ul>
+                        <li class="mail"><a href="mailto:MegaFon@MegaFon.ru">MegaFon@MegaFon.ru</a></li>
+                        <li class="phone"><a href="tel:+87775556699">+8 777 555 66 99</a></li>
+                        <li class="address"><a href="#">Краснодар, ул. Красных Партизан 200</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h3>Основные ссылки</h3>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li><a href="#top">Главная</a></li>
+                        <li><a href="#projects">Наши проекты</a></li>
+                        <li><a href="#services">Наши услуги</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h3>Наши проекты</h3>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li><a href="#">MegaFon</a></li>
+                        <li><a href="#">MegaFon</a></li>
+                        <li><a href="#">MegaFon</a></li>
+                        <li><a href="#">MegaFon</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h3>Социальные сети</h3>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li><a href="#">VK.com</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="second-container">
+            <p>(с) 2019. Все права защищены.</p>
+        </div>
+    </footer>
 </body>
 </html>
