add some adaptive

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                         <li><a href="#news">Новости</a></li>
                         <li><a href="#contacts">Контакты</a></li>
                     </ul>
+                    <div class="burger-wrapper">
+                        <input id="burger-button" src="assets/icons/burger.png" onclick="toggleDisplay()" name="burger-button" alt="Меню" type="image">
+                    </div>
                 </nav>
             </div>
             <div class="banner-title-wrap">
