make some adaptive

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Платформа облачных сервисов от Мегафон</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -228,8 +229,10 @@
                 </div>
                 <div class="section-video-wrap">
                     <div class="play-button-wrap">
-                        <a href="#"><img src="assets/icons/play-button.svg" alt="Воспроизвести"></a>
-                        <a href="#">Смотреть видео</a>
+                        <div class="button-border">
+                            <a href="#"><img src="assets/icons/play-button.svg" alt="Воспроизвести"></a>
+                            <a href="#">Смотреть видео</a>
+                        </div>
                     </div>
                 </div>
             </div>
